edit input text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h2 id="textQ">ingresa codigo de insta</h2>
     <input type="text" name="t" id="t" onkeyup="get(this);">
-    <input type="checkbox" id="che" onclick="reset();"> Inversa
+    <input type="checkbox" id="che" onclick="reset();"> De texto a código
     <div id="text"></div>
 
     <script>
