edit label text

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h2 id="textQ">ingresa codigo de insta</h2>
+    <h2 id="textQ">ingresa código de insta</h2>
     <input type="text" name="t" id="t" onkeyup="get(this);">
     <input type="checkbox" id="che" onclick="reset();"> De texto a código
     <div id="text"></div>
@@ -129,7 +129,7 @@
             if (check.checked) {
                 document.getElementById('textQ').innerHTML = 'ingresa un texto cualquiera';
             }else{
-                document.getElementById('textQ').innerHTML = 'ingresa codigos de insta';
+                document.getElementById('textQ').innerHTML = 'ingresa códigos de insta';
             }
         }
         
